# Pazymiu-skaiciuokle-VU-2

./: CMakeLists.txt  README.md  main.cpp
doxygen documentation/html/: annotated.html  class_person-members.html  class_person.html  class_students-members.html  class_students.html  classes.html  dir_09e761304027c904456130627fd4dcf5.html  files.html  functions_8hpp_source.html  hierarchy.html  index.html  md__r_e_a_d_m_e.html  pages.html  struct_students_manual-members.html  struct_students_manual.html  students_8hpp_source.html
doxygen documentation/html/search/: all_0.js  all_1.js  classes_0.js  classes_1.js  pages_0.js  searchdata.js
doxygen documentation/latex/: annotated.tex  class_person.eps  class_person.tex  class_students.eps  class_students.tex  hierarchy.tex  md__r_e_a_d_m_e.tex  refman.tex  struct_students_manual.tex
includes/: functions.cpp  functions.hpp  students.cpp  students.hpp
install/: Pazymiu_Skaiciuokle_Install_Setup.msi
test/: CMakeLists.txt  Tests.cpp
